refactor: whole plugin
migrate from https://github.com/g1eny0ung/grafana-chaos-mesh-datasource

Signed-off-by: Yue Yang <g1enyy0ung@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ lib-cov
 coverage
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
+dist/
 artifacts/
 work/
 ci/
@@ -28,3 +29,6 @@ e2e-results/
 # Editor
 .idea
 
+jest.config.js
+yeya24-chaosmesh-datasource
+*.zip
