--- a/package.json
+++ b/package.json
@@ -5,26 +5,27 @@
   "author": "Yue Yang <g1enyy0ung@gmail.com> (https://g1eny0ung.site)",
   "license": "Apache-2.0",
   "scripts": {
+    "prepare": "husky install",
     "build": "grafana-toolkit plugin:build",
     "test": "grafana-toolkit plugin:test",
     "dev": "grafana-toolkit plugin:dev",
     "watch": "grafana-toolkit plugin:dev --watch",
-    "postinstall": "husky install",
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
-    "@grafana/data": "^7.0.0",
-    "@grafana/runtime": "^7.4.2",
-    "@grafana/toolkit": "^7.0.0",
-    "@grafana/ui": "^7.0.0",
-    "@testing-library/jest-dom": "5.4.0",
-    "@testing-library/react": "^10.0.2",
+    "@grafana/data": "^7.5.3",
+    "@grafana/runtime": "^7.5.3",
+    "@grafana/toolkit": "^7.5.3",
+    "@grafana/ui": "^7.5.3",
+    "@testing-library/jest-dom": "5.11.10",
+    "@testing-library/react": "^11.2.6",
     "@types/lodash": "latest",
-    "husky": "^5.0.9",
+    "husky": "^6.0.0",
     "import-sort-style-eslint": "^6.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "prettier-plugin-import-sort": "^0.0.6"
+    "prettier-plugin-import-sort": "^0.0.6",
+    "tslib": "^2.2.0"
   },
   "engines": {
     "node": ">=12"
