--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@grafana/ui": "^7.5.3",
     "@testing-library/jest-dom": "5.11.10",
     "@testing-library/react": "^11.2.6",
-    "@types/lodash": "latest",
+    "@types/lodash": "^4.14.168",
     "husky": "^6.0.0",
     "import-sort-style-eslint": "^6.0.0",
     "lint-staged": "^10.5.4",
