--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@grafana/data": "latest",
     "@grafana/runtime": "^8.1.2",
     "@grafana/toolkit": "latest",
-    "@grafana/ui": "latest",
+    "@grafana/ui": "7.0.0",
     "@testing-library/jest-dom": "5.4.0",
     "@testing-library/react": "^10.0.2",
     "@types/lodash": "latest",
