--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "watch": "grafana-toolkit plugin:dev --watch",
     "sign": "grafana-toolkit plugin:sign",
     "start": "yarn watch",
-    "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "prepare": "husky install"
   },
   "author": "Yue Yang <g1enyy0ung@gmail.com> (https://g1eny0ung.site)",
   "license": "Apache-2.0",
@@ -21,12 +20,11 @@
     "@grafana/ui": "7.0.0",
     "@testing-library/jest-dom": "5.4.0",
     "@testing-library/react": "^10.0.2",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/lodash": "^4.14.176",
     "husky": "^7.0.4",
-    "import-sort-style-eslint": "^6.0.0",
     "lint-staged": "^11.2.4",
-    "prettier": "^2.4.1",
-    "prettier-plugin-import-sort": "^0.0.7"
+    "prettier": "^2.4.1"
   },
   "resolutions": {
     "node-sass": "6.0.1"
@@ -36,11 +34,5 @@
   },
   "lint-staged": {
     "*.ts?(x)": "prettier --write"
-  },
-  "importSort": {
-    ".ts, .tsx": {
-      "style": "eslint",
-      "parser": "typescript"
-    }
   }
 }
