--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "author": "Yue Yang <g1enyy0ung@gmail.com> (https://g1eny0ung.site)",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@grafana/data": "latest",
+    "@grafana/data": "7.0.x",
     "@grafana/runtime": "^8.2.2",
     "@grafana/toolkit": "latest",
-    "@grafana/ui": "7.0.0",
+    "@grafana/ui": "7.0.x",
     "@testing-library/jest-dom": "5.4.0",
     "@testing-library/react": "^10.0.2",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
