--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "start": "yarn watch",
     "prepare": "husky install"
   },
-  "author": "Yue Yang <g1enyy0ung@gmail.com> (https://g1eny0ung.site)",
+  "author": "Yue Yang <g1enyy0ung@gmail.com>",
   "license": "Apache-2.0",
   "devDependencies": {
     "@grafana/data": "7.0.x",
     "@grafana/runtime": "^8.2.2",
-    "@grafana/toolkit": "latest",
+    "@grafana/toolkit": "^8.2.2",
     "@grafana/ui": "7.0.x",
     "@testing-library/jest-dom": "5.4.0",
     "@testing-library/react": "^10.0.2",
@@ -24,7 +24,9 @@
     "@types/lodash": "^4.14.176",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.4",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   },
   "engines": {
     "node": ">=14"
