--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 node_modules/
 
@@ -25,9 +26,13 @@ artifacts/
 work/
 ci/
 e2e-results/
+**/cypress/videos
+**/cypress/report.json
 
 # Editor
 .idea
+
+.eslintcache
 
 # npm
 package-lock.json
