--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,11 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - uses: grafana/plugin-actions/build-plugin@release
         # uncomment to enable plugin sign in
-        #with:
-        # see https://grafana.com/developers/plugin-tools/publish-a-plugin/sign-a-plugin#generate-an-access-policy-token to generate it
-        # save the value in your repository secrets
-        #policy_token: $
-        #usage of GRAFANA_API_KEY is deprecated prefer policy_token
-        #grafana_token: $
+        with:
+          # see https://grafana.com/developers/plugin-tools/publish-a-plugin/sign-a-plugin#generate-an-access-policy-token to generate it
+          # save the value in your repository secrets
+          policy_token: ${{ secrets.POLICY_TOKEN }}
