--- a/package.json
+++ b/package.json
@@ -71,6 +71,11 @@
     "react-dom": "18.2.0",
     "tslib": "2.5.3"
   },
+  "pnpm": {
+    "overrides": {
+      "underscore": "^1.13.6"
+    }
+  },
   "packageManager": "pnpm@8.12.1",
   "lint-staged": {
     "*.ts?(x)": "prettier --write"
