--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
           version: 8
       - uses: grafana/plugin-actions/build-plugin@release
         # uncomment to enable plugin sign in
-        # with:
-        #   # see https://grafana.com/developers/plugin-tools/publish-a-plugin/sign-a-plugin#generate-an-access-policy-token to generate it
-        #   # save the value in your repository secrets
-        #   policy_token: ${{ secrets.POLICY_TOKEN }}
+        with:
+          # see https://grafana.com/developers/plugin-tools/publish-a-plugin/sign-a-plugin#generate-an-access-policy-token to generate it
+          # save the value in your repository secrets
+          policy_token: ${{ secrets.POLICY_TOKEN }}
